--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -15,18 +15,39 @@
 }
 
 .headingLg {
-  font-size: 1.5rem;
+  font-size: 2rem;
   line-height: 1.4;
   margin: 1rem 0;
 }
 
 .headingMd {
+  display: flex;
+  color: white;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  max-width: 1000px;
+  margin: auto;
+  padding: 20px;
+  //box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 400px;
+  font-size: 3rem;
+
+  //background-color: #fff;
+}
+
+
+.headingSecond {
   font-size: 1.2rem;
   line-height: 1.5;
 }
 
 .borderCircle {
   border-radius: 9999px;
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
 }
 
 .colorInherit {
