--- a/styles/global.css
+++ b/styles/global.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
-  background-image: url('/images/background.jpg'); /* Update the path to your image */
+  background-image: url('images/background.jpg'); /* Update the path to your image */
   background-size: contain;
   background-position: top;
   background-repeat: no-repeat;
