--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   background-image: url('../public/images/background.jpg'); /* Update the path to your image */
-  background-size: contain;
+  background-size: fixed;
   background-position: top;
   background-repeat: no-repeat;
   background-color: rgba(255, 255, 255, 0.2); /* Transparent white background with alpha */
