--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -32,7 +32,7 @@
   padding: 20px;
   //box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 400px;
-  font-size: 3rem;
+  font-size: 2rem;
 
   //background-color: #fff;
 }
@@ -76,12 +76,12 @@
   position: fixed;
   bottom: 20px;
   right: 50px;
-  background-color: black; /* Set the background color to black */
+  background-color: black;
   color: white;
-  padding: 10px;
+  padding: 15px; /* Adjust the padding */
   border-radius: 5px;
   cursor: pointer;
-  font-size: 1.5em;
+  font-size: 1.8em; /* Adjust the font size */
   transition: background-color 0.3s ease;
 }
 
